src/objects/SomDig_PRAP__c.object
<CustomObject>
    <fields>
        <fullName>SomDig_AbgerechneteErloese__c</fullName>
        <label>Abgerechnete Erlöse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Abrechnungsmonat__c</fullName>
        <description>Startdatum des Abrechnungsmonates</description>
        <inlineHelpText>Startdatum des Abrechnungsmonates</inlineHelpText>
        <label>Abrechnungsmonat (Startdatum)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_Abrechnungsmonatsende__c</fullName>
        <description>Enddatum des Abrechnungsmonates</description>
        <inlineHelpText>Enddatum des Abrechnungsmonates</inlineHelpText>
        <label>Abrechnungsmonat (Enddatum)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_AbzugrenzendeErloese__c</fullName>
        <label>Abzugrenzende Erlöse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_DhBuchungsdatensaetzeEnthalten__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hochrechnung Buchungsdatensätze Enthalte</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_EaBuchungssaetzeEnthalten__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Erlösaufteilung Buchungssätze Enthalten</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Gutschrift__c</fullName>
        <label>Gutschrift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_NochAbzugrenzendeErloese__c</fullName>
        <formula>IF (ISBLANK(SomDig_AbzugrenzendeErloese__c), NULL, SomDig_AbzugrenzendeErloese__c - (IF(ISBLANK(SomDig_AbgerechneteErloese__c), 0, SomDig_AbgerechneteErloese__c)) - (IF(ISBLANK(SomDig_Gutschrift__c), 0, SomDig_Gutschrift__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Noch Abzugrenzende Erlöse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Rechnungsposition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rechnungsposition</label>
        <referenceTo>ADvendio__InvoiceItem__c</referenceTo>
        <relationshipLabel>Passive Rechnungsabgrenzungsposten</relationshipLabel>
        <relationshipName>PassiveRechnungsabgrenzungsposten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Erstellt</fullName>
                    <default>true</default>
                    <label>Erstellt</label>
                </value>
                <value>
                    <fullName>Aufgelöst</fullName>
                </value>
                <value>
                    <fullName>Storniert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_VerrechnungsmonatSAP__c</fullName>
        <label>Verrechnungsmonat (SAP)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Passive Rechnungsabgrenzungsposten</label>
    <nameField>
        <displayFormat>APRP-{0}</displayFormat>
        <label>Passive Rechnungsabgrenzungsposten Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passive Rechnungsabgrenzungsposten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>